{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 13,
  "lineage": "ce67fa80-6bce-fac8-ebdb-b43f9296b03c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255621205772:internet-gateway/igw-0a2ce2d4246c2a50a",
            "id": "igw-0a2ce2d4246c2a50a",
            "owner_id": "255621205772",
            "tags": {
              "Name": "cloud-eng-program-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloud-eng-program-dev-igw",
              "Project": "cloud-eng-program",
              "Session": "S01-terraform-vpc"
            },
            "vpc_id": "vpc-0f677b6242bceb1e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255621205772:route-table/rtb-08179f440e54adb17",
            "id": "rtb-08179f440e54adb17",
            "owner_id": "255621205772",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloud-eng-program-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloud-eng-program-dev-private-rt",
              "Project": "cloud-eng-program",
              "Session": "S01-terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f677b6242bceb1e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255621205772:route-table/rtb-0e6ee3162d4d5ce9e",
            "id": "rtb-0e6ee3162d4d5ce9e",
            "owner_id": "255621205772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2ce2d4246c2a50a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-eng-program-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloud-eng-program-dev-public-rt",
              "Project": "cloud-eng-program",
              "Session": "S01-terraform-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f677b6242bceb1e8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00134ddae4ef515b7",
            "route_table_id": "rtb-08179f440e54adb17",
            "subnet_id": "subnet-062a998741cfb8e5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7f9adff055ee254",
            "route_table_id": "rtb-08179f440e54adb17",
            "subnet_id": "subnet-0cb6df27a589a533c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083745ef69cb5cc17",
            "route_table_id": "rtb-0e6ee3162d4d5ce9e",
            "subnet_id": "subnet-081468f219ca71910"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0260d05e09e3b0527",
            "route_table_id": "rtb-0e6ee3162d4d5ce9e",
            "subnet_id": "subnet-0b09b85b750cf9549"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255621205772:subnet/subnet-062a998741cfb8e5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062a998741cfb8e5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255621205772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-eng-program-dev-private-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloud-eng-program-dev-private-1",
              "Project": "cloud-eng-program",
              "Session": "S01-terraform-vpc",
              "Type": "private"
            },
            "vpc_id": "vpc-0f677b6242bceb1e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255621205772:subnet/subnet-0cb6df27a589a533c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb6df27a589a533c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255621205772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-eng-program-dev-private-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloud-eng-program-dev-private-2",
              "Project": "cloud-eng-program",
              "Session": "S01-terraform-vpc",
              "Type": "private"
            },
            "vpc_id": "vpc-0f677b6242bceb1e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255621205772:subnet/subnet-081468f219ca71910",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081468f219ca71910",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255621205772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-eng-program-dev-public-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloud-eng-program-dev-public-1",
              "Project": "cloud-eng-program",
              "Session": "S01-terraform-vpc",
              "Type": "public"
            },
            "vpc_id": "vpc-0f677b6242bceb1e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255621205772:subnet/subnet-0b09b85b750cf9549",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b09b85b750cf9549",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255621205772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-eng-program-dev-public-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloud-eng-program-dev-public-2",
              "Project": "cloud-eng-program",
              "Session": "S01-terraform-vpc",
              "Type": "public"
            },
            "vpc_id": "vpc-0f677b6242bceb1e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255621205772:vpc/vpc-0f677b6242bceb1e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054bd31ba6ac67731",
            "default_route_table_id": "rtb-0643726a2162e333b",
            "default_security_group_id": "sg-0d4f37b2672a716c1",
            "dhcp_options_id": "dopt-06cffc7c346452da2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f677b6242bceb1e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0643726a2162e333b",
            "owner_id": "255621205772",
            "tags": {
              "Name": "cloud-eng-program-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloud-eng-program-dev-vpc",
              "Project": "cloud-eng-program",
              "Session": "S01-terraform-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}